refactor: switch to components